Closed Bug 44002 Opened 25 years ago Closed 25 years ago

no forwarding to the next url by javascript

Categories

(Core :: DOM: Core & HTML, defect, P2)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: ino, Assigned: jst)

References

()

Details

(Whiteboard: [nsbeta3+][HAVE FIX])

Attachments

(1 file)

From Bugzilla Helper: User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; m16) Gecko/20000613 BuildID: 20000061311 (M16/de-AT) the site uses the following script to forward automatically to the next url, when the image is complete loaded, but the script does not run in M16, so there is no automatic forward. Reproducible: Always Steps to Reproduce: 1.start the site "www.lichtblitz.de" 2.nothing, no forward 3. Actual Results: the startsite is running, but no forward Expected Results: Mozilla should forward to the next site
confirming using 2000062608 nightly on w2k
Status: UNCONFIRMED → NEW
Ever confirmed: true
Doesn't seem like a JS Engine problem - reassigning to Browser-General
Assignee: rogerl → asa
Component: Javascript Engine → Browser-General
QA Contact: pschwartau → doronr
this looks like a duplicate of bug 41707
not 41707 I guess since that is fixed and this is not mozilla win32 build on NT 071108. over to DOM0
Assignee: asa → jst
Component: Browser-General → DOM Level 0
QA Contact: doronr → desale
Attached patch Proposed fixSplinter Review
Status: NEW → ASSIGNED
Keywords: correctness, nsbeta3
OS: Windows 2000 → All
Priority: P3 → P2
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → M18
Accepting and nominating for nsbeta3. This is due to a stupid mistake in the nsImageFrame code, see attached patch. Not fixing this will break all the JS out there that checks if "image.complete == true" because image.complete has the boolean value of 2 (oops) in stead of one.
Marking nsbeta3+...
Whiteboard: [HAVE FIX] → [HAVE FIX][nsbeta3+]
Whiteboard: [HAVE FIX][nsbeta3+] → [nsbeta3+][HAVE FIX]
Fixed.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Verified with 2000-091309. Marking verified.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: