Fixing nsbeta3+ bug 44002. Don't use non boolean values (the value 2 in this case) as a boolean true since 2 != true in JS. This caused scripts that rely on img.complete == true when an image has loaded to break. r=nisheeth@netscape.com